added edit option

--- a/views/products.hbs
+++ b/views/products.hbs
@@ -47,7 +47,7 @@
                         <td>
                             {{name}}
                         </td>
-                        <td><a href="{{url}}">
+                        <td><a href="/{{url}}">
                                 {{url}}
                             </a></td>
                         <td> <a href="/addMoreSub/{{_id}}" class="btn btn-success">Add more sub</a> </td>
