--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,6 +18,7 @@
                     <tr>
                         <th scope="col">Category</th>
                         <th scope="col">url starts</th>
+                        <th scope="col">Action</th>
                     </tr>
                 </thead>
 
@@ -28,6 +29,7 @@
                             {{name}}
                         </td>
                         <td>{{url}}</td>
+                        <td> <a href="/updatecat/{{_id}}">Edit</a></td>
                     </tr>
                     {{/each}}
 
